css/style.css
@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);

@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');

body,
html {
    margin: 0;
    padding: 0;
    height: 100%;
}

body {
    max-height: 100vh;
    width: 100vw;
}

#container {
    overflow: hidden;
    height: 75vh;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    align-items: center;
    margin-bottom: 10px;
    scroll-behavior: smooth;
    margin: auto;


}

#main-text::-webkit-scrollbar {
    width: 0.5em;
    /* Adjust as needed */
}

#main-text::-webkit-scrollbar-thumb {
    background-color: rgba(169, 169, 169, 0);
}

#main-text {
    margin-top: 10%;
    overflow-y: auto;
    /* Enable vertical scrolling */
    max-height: 100%;
    white-space: pre-line;
    padding: 10px;
    font-size: 24px;
    color: #f3eeee;
    line-height: 1.5;
    max-width: 800px;
}


.view {

    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    min-height: 100vh;
    position: relative;
    color: white;
    padding: 20px;


}

.view2 {
    background-color: black;
    background-color: rgba(12, 12, 12, 0.377);
    width: 100%;
    height: 100%;
    inset: 0;
    position: absolute;
}

.button {
    position: relative;
    text-decoration: none;
    font-size: 1.5em;
    letter-spacing: 0.1em;
    font-weight: 400;
    padding: 10px 20px;
    transition: 0.5s;
    border: none;
    border-radius: 10px;
    color: white;
}

.button:hover {
    letter-spacing: 0.25em;
    background: var(--clr);
    box-shadow: 0 0 35px var(--clr);
    color: red;
    background-color: green;

}

.button::before {
    content: "JOIN THE CAUSE";
    position: absolute;
    inset: 2px;
    background: rgb(6, 8, 7);
}

.button-details {
    background-color: #4CB5F9;
    color: white;
}

/* Login form  */

.or {
    position: relative;
}

.or:before {
    content: '';
    height: 1px;
    background: linear-gradient(to right, silver, silver, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), silver, silver);
    position: absolute;
    left: 0;
    top: 50%;
    width: 100%;
    z-index: 0;
}

.text-details {
    font-size: 28px;
    font-family: cursive;
}

.text-design {
    text-decoration: none;
}

#toastBox {
    position: absolute;
    top: 6px;
    right: 30px;
    display: flex;
    align-items: flex-end;
    flex-direction: column;
    overflow: hidden;
    padding: 20px;
}

.title-font {
    font-family: 'Oleo Script', system-ui;
    font-size: 36px;
}

.button-position{
    margin: auto;
}

.nav-position{
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100vw;
    margin: auto;
    overflow: hidden;
    background-color: black;
    background-color: rgba(0, 0, 0, .8);
    
       
    /* position: absolute;
   bottom: 0;
   width: 500px;
   margin: auto;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    padding: 20px; */
}

#social-link{
    color: #385185;
}

#login-button{
    border-radius: 10px;
    padding: 2px;
}

#forgot-password{
    color:#5270B8 ;
}

#sign-up{
    text-decoration: none;
    font-weight: 500;
}

@media (max-width: 576px) {
    #main-text {
        margin-top: 10%;
        /* Adjust this percentage as needed */
        padding: 10px;
        font-size: 24px;
    }


    #toastBox {
        position: absolute;
        top: 6px;
        right: 10px;
        display: flex;
        align-items: flex-end;
        flex-direction: column;
        overflow: hidden;
        padding: 5px;
    }
}

@media only screen and (max-width: 768px) {
    #main-text {
        margin-top: 10%;
        /* Adjust this percentage as needed */
        padding: 10px;
        font-size: 24px;
    }
}

